# BERT-playground

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  environment.yaml  environment.yml  pyproject.toml  requirements.txt  requirements_torch.txt
configs/: mlm.yaml  ner.yaml  rerank.yaml  word-clf.yaml
data/: Dataset processing - Chia.ipynb  Dataset processing - Clinical Trials CTTI.ipynb  Dataset processing - LCT.ipynb
datasets/: Dataset processing - Chia.ipynb  Dataset processing - Clinical Trials CTTI.ipynb  Dataset processing - Clinical Trials ICTRP.ipynb  Dataset processing - LCT.ipynb  tmp
jobs/: run_args.json  run_ner.py  run_ner_chia.py  token_classification_ner_chia.py
notebooks/: 1 - Tokenization - Custom Tokenizer - Clinical Trials CTTI & ICTRP.ipynb  1 [to map to bert & gpt and to training new tokenizer] - Tokenization - Pretrained Tokenizers.ipynb  General - Datasets.ipynb  General - Some tokenizers.ipynb  General - Token Embedding - Matrix Factorization methods.ipynb  General - Token Embedding - Word2Vec, FastText, Doc2Vec.ipynb  General - Tokenization - Tokenizer fitting (clinical-trials).ipynb  Token Classification - LM - Encoder pretraining using Masked Language Modeling task (albert-small-clinical-trials).ipynb  Token Classification - LM - Encoder pretraining using custom Language Modeling task.ipynb  Token Classification - MLM - Albert Small - Clinical Trials CTTI.ipynb  Token Classification - MLM - Albert Small - Clinical Trials ICTRP.ipynb  Token Classification - MLM - Clinical Trials CTTI - Albert Small.ipynb  Token Classification - NER - Albert - CHIA.ipynb  Token Classification - NER - Albert - LCT.ipynb  Token Classification - NER - Albert Small CTTI - CHIA.ipynb  Token Classification - NER - Albert Small ICTRP - CHIA.ipynb  Token Classification - NER - BioElectra - CHIA.ipynb  Token Classification - NER - BioLinkBert - CHIA.ipynb  Token Classification - NER - CHIA (albert-small-ctti-chia).ipynb  Token Classification - NER - CHIA - Albert - Commented.ipynb  Token Classification - NER - CHIA - Albert ✨.ipynb  Token Classification - NER - CHIA - BioLinkBert.ipynb  Token Classification - NER - CHIA - PubMedBert.ipynb  Token Classification - NER - Electra Small - CHIA.ipynb  Token Classification - NER - Encoder pretraining using simple Discriminative Language Modeling (albert-small-clinical-trials-randomshuffle).ipynb  Token Classification - NER - PubmedBert - CHIA.ipynb  (+12 more)
(+237 files in other folders)
