[tool.poetry]
name = "bert playground"
version = "0.1.0"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"
packages = [{include = "bertools", from="src"}]

[tool.poetry.dependencies]
python = "~3.11"
torch = {version = "^2.2.1+cu121", source = "torch-cu121"}
pandas = "^2.2.0"
numpy = "^1.26.4"
openpyxl = "^3.1.2"
pyarrow = "^15.0.0"
unidecode = "^1.3.8"
notebook = "^7.1.0"
ipykernel = "^6.29.2"
jupytext = "^1.16.1"
transformers = "^4.38.1"
datasets = "^2.17.1"
evaluate = "^0.4.1"
seqeval = "^1.2.2"
bitsandbytes = "^0.42.0"
tensorboard = "^2.16.2"
scikit-learn = "^1.4.1.post1"
gensim = "^4.3.2"
spacy = "^3.7.4"
mittens = "^0.2"
networkx = "^3.2.1"
matplotlib = "^3.8.3"
pyvis = "^0.3.2"
sentence-transformers = "^2.7.0"
fire = "^0.6.0"
omegaconf = "^2.3.0"
accelerate = "^0.30.0"
loguru = "^0.7.2"


[[tool.poetry.source]]
name = "torch-cu121"
url = "https://download.pytorch.org/whl/cu121"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
