# PROJECT

[tool.poetry]
name = "bert playground"
version = "0.2.0"
description = ""
authors = ["Jean-baptiste Aujogue <jb.aujogue@gmail.com>"]
readme = "README.md"
packages = [{include = "bertools", from="src"}]

# DEPENDENCIES

[tool.poetry.dependencies]
accelerate = "^1.2.1"
datasets = "^3.2.0"
fire = "^0.7.0"
loguru = "^0.7.3"
numpy = "^2.2.1"
pandas = "^2.2.3"
plotly = "^5.24.1"
python = "~3.11"
torch = {version = "^2.5.1+cu124", source = "torch-cu124"}
transformers = "^4.47.1"
sentence-transformers = "^3.3.1"
unidecode = "^1.3.8"
sentencepiece = "^0.2.0"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
jupytext = "^1.16.6"
mypy = "^1.14.1"
pre-commit = "^4.0.1"
ruff = "^0.8.5"
tensorboard = "^2.18.0"

[[tool.poetry.source]]
name = "torch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "explicit"

# CONFIGURATIONS

[tool.ruff]
exclude = ["configs/", "data/", "models/", "notebooks/", "scripts/", "tests/"]
line-length = 120

[tool.ruff.lint]
select = ["C", "E", "F", "I", "W", "N", "B"]
ignore = ["N812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.mypy]
exclude = '^(?!src).*'
ignore_missing_imports = true

# SYSTEMS

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
